public/stylesheets/style.scss
body {
  font-family: 'Raleway', sans-serif;
}

button {
  cursor: pointer;
}

a.btn {
  background-color: black;
  &:hover {
    background-color: grey;
  }
}

.nav-wrapper {
  padding-left: 5px;
  padding-right: 5px;
  a {
  color: black;
  }
}

.collection-item a {
  color: black;
  &:hover {
    color: #3BAEA0;
  }
}

.flexManagers {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

ul.fav {
  width: 80%;
  margin: 0 auto;
}

ul.rev {
  width: 90%;
  margin: 0 auto;
}

.btn {
  background-color: black;
  &:hover {
    background-color: grey;
  }
}

.flexButtons {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.flexButtons2 {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

.card-content a {
  color: white;
  &:hover {
    color: #3BAEA0;
  }
}

.card .card-action a:not(.btn):not(.btn-large):not(.btn-large):not(.btn-floating) {
  text-transform: none;
}

.tabs .tab a {
 color: white;
}

.tabs .tab a:hover, .tabs .tab a.active {
 color: #3BAEA0 ;
}

.tabs .indicator {
 background-color: #3BAEA0 ;
}

h1 a {
  color: black;
  &:hover {
    color: #3BAEA0;
  }
}

i.large {
  color: #3BAEA0;
}

.tabs .tab a {
  color: white;
}

.tabs .tab a:hover, .tabs .tab a.active {
  color: #3BAEA0;
}

.tabs .indicator {
  background-color: #3BAEA0;
}


span.card-title.center {
  font-size: 3rem;
  font-family: 'Roboto Slab', serif;
}

textarea.materialize-textarea:focus:not([readonly]) {
  border-bottom: 1px solid black;
  box-shadow: 0 1px 0 0 black;
}

textarea.materialize-textarea:focus:not([readonly])+label {
  color: black;
}

.promo-caption {
  font-size: 1.7rem;
}

div.center-promo {
  text-align: center;
  margin-top: 20px;
}

.secondary-content {
  color: black;
}

/* label color */
.input-field label {
  color: black;
}

/* label focus color */
.input-field input[type=text]:focus + label {
  color: black;
}
/* label underline focus color */
.input-field input[type=text]:focus {
  border-bottom: 1px solid black;
  box-shadow: 0 1px 0 0 black;
}
/* valid color */
.input-field input[type=text].valid {
  border-bottom: 1px solid black;
  box-shadow: 0 1px 0 0 black;
}
/* invalid color */
.input-field input[type=text].invalid {
  border-bottom: 1px solid black;
  box-shadow: 0 1px 0 0 black;
}
/* label focus color */
.input-field input[type=password]:focus + label {
  color: black;
}
/* label underline focus color */
.input-field input[type=password]:focus {
  border-bottom: 1px solid black;
  box-shadow: 0 1px 0 0 black;
}
/* valid color */
.input-field input[type=password].valid {
  border-bottom: 1px solid black;
  box-shadow: 0 1px 0 0 black;
}
/* invalid color */
.input-field input[type=password].invalid {
  border-bottom: 1px solid black;
  box-shadow: 0 1px 0 0 black;
}
/* label focus color */
.input-field input[type=textarea]:focus + label {
  color: black;
}
/* label underline focus color */
.input-field input[type=textarea]:focus {
  border-bottom: 1px solid black;
  box-shadow: 0 1px 0 0 black;
}
/* valid color */
.input-field input[type=textarea].valid {
  border-bottom: 1px solid black;
  box-shadow: 0 1px 0 0 black;
}
/* invalid color */
.input-field input[type=textarea].invalid {
  border-bottom: 1px solid black;
  box-shadow: 0 1px 0 0 black;
}
/* icon prefix focus color */
.input-field .prefix.active {
  color: black;
}

.favorites {
  margin: 10px auto;
}

.card-content {
  color: white;
  p {
  text-align: left;
  }
}

.myButton {
  -moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
  -webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
  box-shadow:inset 0px 1px 0px 0px #ffffff;
  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf));
  background:-moz-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
  background:-webkit-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
  background:-o-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
  background:-ms-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
  background:linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#dfdfdf',GradientType=0);
  background-color:#ededed;
  -moz-border-radius:6px;
  -webkit-border-radius:6px;
  border-radius:6px;
  border:1px solid #dcdcdc;
  display:inline-block;
  cursor:pointer;
  color:#777777;
  font-family:Arial;
  font-size:15px;
  font-weight:bold;
  padding:6px 24px;
  text-decoration:none;
  text-shadow:0px 1px 0px #ffffff;
}
.myButton:hover {
  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #dfdfdf), color-stop(1, #ededed));
  background:-moz-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
  background:-webkit-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
  background:-o-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
  background:-ms-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
  background:linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfdfdf', endColorstr='#ededed',GradientType=0);
  background-color:#dfdfdf;
}
.myButton:active {
  position:relative;
  top:1px;
}

.icons-container {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  margin-top: 30px;
}

.category-labels {
  color: black;
}

.icon {
  height: 100px;
  width: 100px;
}

.library-icon {
  height: 125px;
  width: 125px;
  margin-bottom: -10px;
}

.icons {
  height: 180px;
  width: 180px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin-bottom: 10px;
}

.icon-row {
  display: flex;
}

.dashboard {
  text-align: center;
}
.modules-label {
  font-size: 14px;
  color: black;
}

.favorites {
  margin: 10px auto;
}

.card-content p {
  text-align: left;
}

.flex {
  display: flex;
  justify-content: space-between;
}

.flexButtons {
  display: flex;
  justify-content: space-between;
}

